--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.17.3",
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
@@ -21,9 +22,11 @@
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
