--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.17.3",
